--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: "Abel"
 author: "Genanik"
-version: "2.1.6"
+version: "2.1.7"
 main: "io.genanik.miraiPlugin.AbelPluginMain"
 info: "Abel机器人插件"
-depends: []
+depends: ["com.github.houbb:opencc4j:1.5.2", "net.java.dev.jna:jna:5.5.0"]
