--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: "Abel"
 author: "Genanik"
-version: "2.7.4"
+version: "2.7.5-Beta1"
 main: "io.genanik.miraiPlugin.AbelPluginMain"
 info: "Abel机器人插件"
 depends: []
