--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: "Abel"
 author: "Genanik"
-version: "3.0.0-Beta3"
+version: "3.0.0-Beta4"
 main: "io.genanik.daHuo.AbelPluginMain"
-info: "Abel机器人插件"
+info: "基于Abel的QQ大火插件"
 depends: []
